gitfilesplit changelog
======================


v0.1.0 [2020-01-26]
-------------------
+ Basic functionality.